--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
     <div class="flex items-center gap-2">
       <%= link_to root_path(locale: I18n.locale), class: 'flex items-center gap-2' do %>
-        <span class="inline-block w-8 h-8 rounded-lg bg-voidfiles-blue flex items-center justify-center text-white font-bold text-2xl">V</span>
+        <img src="/voidfiles_64x64.png" alt="VoidFiles Logo" class="w-8 h-8 rounded-lg bg-voidfiles-blue" />
         <span class="font-bold text-lg text-voidfiles-navy tracking-tight">VoidFiles</span>
       <% end %>
     </div>
